--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconscout/react-unicons": "^2.0.2",
+    "@iconscout/react-unicons-solid": "^1.0.2",
+    "@tippyjs/react": "^4.2.6",
     "react": "^18.2.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
