--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@iconscout/react-unicons-solid": "^1.0.2",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
