--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconscout/react-unicons": "^2.0.2",
     "@iconscout/react-unicons-solid": "^1.0.2",
+    "@tanstack/react-query": "^4.36.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
     "react": "^18.2.0",
