--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
