--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^4.17.0",
