--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-portal": "^4.2.2",
     "react-router-dom": "^6.15.0",
-    "react-select": "^5.7.7"
+    "react-select": "^5.7.7",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
