--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@tippyjs/react": "^4.2.6",
+    "animate.css": "^4.1.1",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.7",
+    "recharts": "^2.10.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
