--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "workflex-fe",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
-    "@ckeditor/ckeditor5-react": "^6.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@iconscout/react-unicons": "^2.0.2",
-    "@iconscout/react-unicons-solid": "^1.0.2",
-    "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-query-devtools": "^4.36.1",
-    "@tippyjs/react": "^4.2.6",
-    "animate.css": "^4.1.1",
-    "axios": "^1.5.1",
-    "date-fns": "^2.30.0",
-    "file-saver": "^2.0.5",
-    "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.17.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
-    "react-hot-toast": "^2.4.1",
-    "react-portal": "^4.2.2",
-    "react-router-dom": "^6.15.0",
-    "react-select": "^5.7.7",
-    "recharts": "^2.10.2",
-    "socket.io-client": "^4.7.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
-  }
+    "name": "workflex-fe",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "start": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+        "@ckeditor/ckeditor5-react": "^6.1.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@iconscout/react-unicons": "^2.0.2",
+        "@iconscout/react-unicons-solid": "^1.0.2",
+        "@tanstack/react-query": "^4.36.1",
+        "@tanstack/react-query-devtools": "^4.36.1",
+        "@tippyjs/react": "^4.2.6",
+        "animate.css": "^4.1.1",
+        "axios": "^1.5.1",
+        "date-fns": "^2.30.0",
+        "dotenv": "^16.4.5",
+        "file-saver": "^2.0.5",
+        "js-cookie": "^3.0.5",
+        "react": "^18.2.0",
+        "react-datepicker": "^4.17.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.47.0",
+        "react-hot-toast": "^2.4.1",
+        "react-portal": "^4.2.2",
+        "react-router-dom": "^6.15.0",
+        "react-select": "^5.7.7",
+        "recharts": "^2.10.2",
+        "socket.io-client": "^4.7.2"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.15",
+        "@types/react-dom": "^18.2.7",
+        "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.15",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "postcss": "^8.4.29",
+        "prettier": "^3.0.1",
+        "prettier-plugin-tailwindcss": "^0.4.1",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.5"
+    }
 }
